--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ if (!doNotTrack) {
 	<a href="/posts">Archive</a>
 	<a href="/tags">Tags</a>
 	<a href="/about">About</a>
-
+	<a href="/CV">CV</a>
 	
 
 	
