--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ onload='renderMathInElement(document.body);'></script>
 			
 
 <div class="font-serif text-medium-red-violet-400 pt-3">
-	Tokiwa-iro is the theme color of this site.
+	Tokiwa-iro is the theme color of this site. Hello this is Khanh.
 </div>
 <hr  class="pt-2"/>
 
