--- a/series/index.html
+++ b/series/index.html
@@ -27,8 +27,8 @@
 	
 
 	
-	<link rel="alternate" href="/tags/index.xml" type="application/rss+xml" title="Khanh Hoang">
-	<link rel="feed" href="/tags/index.xml" type="application/rss+xml" title="Khanh Hoang">
+	<link rel="alternate" href="/series/index.xml" type="application/rss+xml" title="Khanh Hoang">
+	<link rel="feed" href="/series/index.xml" type="application/rss+xml" title="Khanh Hoang">
 	
 	
 	
@@ -168,7 +168,7 @@ onload='renderMathInElement(document.body);'></script>
 	
 	
 	<li>
-		<a href='/tags/index.xml'>RSS</a>
+		<a href='/series/index.xml'>RSS</a>
 	</li>
 	
 	
@@ -195,7 +195,7 @@ onload='renderMathInElement(document.body);'></script>
 	</div>
 </article>
 <div>
-	<section class="waterfall">
+	<section>
 		
 	</section>
 </div>
