--- a/404.html
+++ b/404.html
@@ -22,23 +22,13 @@
 
 	
 	
+<link rel="shortcut icon" href="img/favicon-32x32.png" type="image/png" />
+
 	
 
 	
 	
 	
-<script type="application/javascript">
-var doNotTrack = false;
-if (!doNotTrack) {
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-	ga('create', 'UA-1234567890', 'auto');
-	
-	ga('send', 'pageview');
-}
-</script>
 	
 	
 	
@@ -156,19 +146,34 @@ onload='renderMathInElement(document.body);'></script>
 	
 	
 	<li class="px-1 md:px-0">
-		<a href="/post/" title="Posts page" >
-			Posts
+		<a href="/about/" title="About page" >
+			About
 		</a>
 	</li>
 	
 	<li class="px-1 md:px-0">
-		<a href="/tags/" title="Tags page" >
-			Tags
+		<a href="/contact/" title="Contact page" >
+			Contact
+		</a>
+	</li>
+	
+	<li class="px-1 md:px-0">
+		<a href="/cv/" title="CV page" >
+			CV
 		</a>
 	</li>
 	
 	
 	
+	
+	<div id="fastSearch" class="m-0">
+		<input id="searchInput" type="text" size=10 
+			class="bg-gray-100 focus:outline-none border-b border-gray-100 focus:border-eucalyptus-300 md:text-right
+			placeholder-java-500 min-w-0 max-w-xxxs"
+			placeholder="search" />
+		<ul id="searchResults" class="bg-gray-200 px-2 divide-y divide-gray-400">
+		</ul>
+	</div>
 	
 </ul>
 			</div>
@@ -189,6 +194,8 @@ onload='renderMathInElement(document.body);'></script>
 			class="w-full md:w-2/5 xl:w-1/2 md:pr-12 lg:pr-20 xl:pr-24 order-4 md:order-3 md:sticky md:bottom-0 self-end max-w-2xl">
 			<div class="md:float-right md:text-right leading-loose tracking-tight md:mb-2">
 				
+
+
 
 
 
@@ -252,7 +259,7 @@ onload='renderMathInElement(document.body);'></script>
 		Built with Hugo and theme <a 
 			href="https://github.com/heyeshuang/hugo-theme-tokiwa">Tokiwa</a>.
 			<br />
-			4 pages, 6 words in total.
+			5 pages, 6 words in total.
 	</div>
 </div>
 			</div>
@@ -265,6 +272,9 @@ onload='renderMathInElement(document.body);'></script>
 
 <script src="/dist/app.js"></script>
 
+
+<script src="/lib/fuse.min.js"></script> 
+<script src="/lib/fastsearch.js"></script>
 
 	</div>
 </body>
