--- a/404.html
+++ b/404.html
@@ -29,6 +29,18 @@
 	
 	
 	
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	ga('create', 'UA-FAKE', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
 	
 	
 	
@@ -152,14 +164,14 @@ onload='renderMathInElement(document.body);'></script>
 	</li>
 	
 	<li class="px-1 md:px-0">
-		<a href="/contact/" title="Contact page" >
-			Contact
+		<a href="/cv/" title="CV page" >
+			CV
 		</a>
 	</li>
 	
 	<li class="px-1 md:px-0">
-		<a href="/cv/" title="CV page" >
-			CV
+		<a href="/contact/" title="Contact page" >
+			Contact
 		</a>
 	</li>
 	
@@ -194,6 +206,8 @@ onload='renderMathInElement(document.body);'></script>
 			class="w-full md:w-2/5 xl:w-1/2 md:pr-12 lg:pr-20 xl:pr-24 order-4 md:order-3 md:sticky md:bottom-0 self-end max-w-2xl">
 			<div class="md:float-right md:text-right leading-loose tracking-tight md:mb-2">
 				
+
+
 
 
 
@@ -261,7 +275,7 @@ onload='renderMathInElement(document.body);'></script>
 		Built with Hugo and theme <a 
 			href="https://github.com/heyeshuang/hugo-theme-tokiwa">Tokiwa</a>.
 			<br />
-			6 pages, 7 words in total.
+			7 pages, 10 words in total.
 	</div>
 </div>
 			</div>
