change title contents

--- a/about/index.html
+++ b/about/index.html
@@ -177,7 +177,8 @@ onload='renderMathInElement(document.body);'></script>
 
 <article>
 	<section class="mx-auto content">
-		<div class="c-rich-text"><p>I am Khanh</p>
+		<div class="c-rich-text"><h1 id="about">About</h1>
+<p>I am Khanh</p>
 </div>
 	</section>
 
@@ -276,7 +277,7 @@ onload='renderMathInElement(document.body);'></script>
 	<div class="text-sm text-gray-500 leading-tight a-gray">
 		
 		<br />
-		Built with Hugo and theme <a href="https://github.com/heyeshuang/hugo-theme-tokiwa">Tokiwa</a>. 3 words in this page.
+		Built with Hugo and theme <a href="https://github.com/heyeshuang/hugo-theme-tokiwa">Tokiwa</a>. 4 words in this page.
 	</div>
 </div>
 
