--- a/cv/index.html
+++ b/cv/index.html
@@ -177,8 +177,8 @@ onload='renderMathInElement(document.body);'></script>
 
 <article>
 	<section class="mx-auto content">
-		<div class="c-rich-text"><h2 id="hello">Hello</h2>
-<p>This is the first page</p>
+		<div class="c-rich-text"><h1 id="cv">CV</h1>
+<p>This is my CV</p>
 </div>
 	</section>
 
@@ -277,7 +277,7 @@ onload='renderMathInElement(document.body);'></script>
 	<div class="text-sm text-gray-500 leading-tight a-gray">
 		
 		<br />
-		Built with Hugo and theme <a href="https://github.com/heyeshuang/hugo-theme-tokiwa">Tokiwa</a>. 6 words in this page.
+		Built with Hugo and theme <a href="https://github.com/heyeshuang/hugo-theme-tokiwa">Tokiwa</a>. 5 words in this page.
 	</div>
 </div>
 
