--- a/about/index.html
+++ b/about/index.html
@@ -178,7 +178,7 @@ onload='renderMathInElement(document.body);'></script>
 <article>
 	<section class="mx-auto content">
 		<div class="c-rich-text"><h1 id="about">About</h1>
-<p>I am Khanh</p>
+<p>I am Khanh.</p>
 </div>
 	</section>
 
