--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@ onload='renderMathInElement(document.body);'></script>
 		<div>
 			<div class="pb-8">
 	<div class="font-serif font-medium text-xl">
-		<a href="https://hngkhanh.github.io/post/today-is-wednesday/">
-			Today is Wednesday
+		<a href="https://hngkhanh.github.io/post/perfume/">
+			Perfume by Patrick Süskind
 		</a>
 	</div>
 	
@@ -214,7 +214,7 @@ onload='renderMathInElement(document.body);'></script>
 	
 	
 	<div class="font-serif text-gray-600 font-light pt-1">
-		What do you do when you&#39;re bored?</div>
+		An excerpt</div>
 
 	
 	
@@ -294,7 +294,7 @@ onload='renderMathInElement(document.body);'></script>
 		Built with Hugo and theme <a 
 			href="https://github.com/heyeshuang/hugo-theme-tokiwa">Tokiwa</a>.
 			<br />
-			11 pages, 17 words in total.
+			
 	</div>
 </div>
 			</div>
