--- a/cv/index.html
+++ b/cv/index.html
@@ -170,7 +170,7 @@ onload='renderMathInElement(document.body);'></script>
 <article>
 	<section class="mx-auto content">
 		<div class="c-rich-text"><h1 id="cv">CV</h1>
-<p>This is my CV</p>
+<p>You can find my CV <a href="./CV_Khanh_Hoang.pdf">here</a></p>
 </div>
 	</section>
 
