--- a/about/index.html
+++ b/about/index.html
@@ -170,7 +170,7 @@ onload='renderMathInElement(document.body);'></script>
 <article>
 	<section class="mx-auto content">
 		<div class="c-rich-text"><h1 id="about">About</h1>
-<p>I am Khanh.</p>
+<p>My name is Khanh, my middle name is Ngoc. My Vietnamese name is Ngoc Khanh. Ngoc Khanh Hoang. And when I write Ngoc Khanh Hoang people mistake Ngoc for my first name. I am 20, from Ha Noi, Viet Nam. I love books. I study Economics.</p>
 </div>
 	</section>
 
