--- a/about/index.html
+++ b/about/index.html
@@ -171,7 +171,7 @@ onload='renderMathInElement(document.body);'></script>
 	<section class="mx-auto content">
 		<div class="c-rich-text"><h1 id="about">About</h1>
 <div style="text-align: justify">
-My name is Khanh, my middle name is Ngoc, my last name is Khanh. My Vietnamese name is Hoang Ngoc Khanh - in this sequence. I elaborate this carefully since people misspell my name a lot. And it puts me off (nonetheless I acknowledge mine is a difficult name). I am 20, from Ha Noi. I have (inevitably) been in the Netherlands for three years in a row, without a single visit to my family. I hope they can come to see my on my graduation day, if the condition permits. 
+My name is Khanh, my middle name is Ngoc, my last name is Hoang. My Vietnamese name is Hoang Ngoc Khanh - in this sequence. I elaborate this carefully since people misspell my name a lot. And it puts me off (nonetheless I acknowledge mine is a difficult name). I am 20, from Ha Noi. I have (inevitably) been in the Netherlands for three years in a row, without a single visit to my family. I hope they can come to see my on my graduation day, if the condition permits. 
 <br> </br>
 I am currently a final year bachelor student at Maastricht University. I study Economics, and major in Microeconomics.  My focus lies in the area of empirical and applied microeconomics. I am particularly concerned with questions in the fields of labour, health, education, and development economics.
 </div></div>
